@@ -6,19 +6,26 @@ using System.Threading.Tasks;
 
 namespace Compiler.OOS_LanguageObjects
 {
-    public class NativeFunction : NativeInstruction, Interfaces.iName
+    public class NativeAssign : NativeInstruction, Interfaces.iName
     {
         private Ident name;
         public Ident Name { get { return name; } set { if (!value.IsSimpleIdentifier) throw new Ex.InvalidIdentType(value.getIdentType(), IdentType.Name); name = value; } }
         public string FullyQualifiedName { get { return this.Name.FullyQualifiedName; } }
-
-        public NativeFunction(pBaseLangObject parent, int line, int pos) : base(parent, line, pos)
+        public NativeAssign(pBaseLangObject parent, int line, int pos) : base(parent, line, pos)
         {
+            if (parent is Native)
+            {
+                this.name = ((Native)parent).Name;
+                this.VTO = new VarTypeObject(this.name);
+            }
+            else
+            {
+                throw new Exception("Never NEVER ever this should happen! If it does, report to dev.");
+            }
         }
         public override int doFinalize()
         {
             int errCount = 0;
-            errCount += name.finalize();
             if (VTO.ident != null)
                 errCount += VTO.ident.finalize();
             return errCount;
